--- a/src/components/AsideMenu/AsideMenu.css
+++ b/src/components/AsideMenu/AsideMenu.css
@@ -48,7 +48,6 @@
   align-items: center;
   width: 95vw;
   margin-top: 20px;
-  position: fixed;
 }
 
 .logo {
